--- a/src/Style/footer.scss
+++ b/src/Style/footer.scss
@@ -3,6 +3,7 @@
     min-height: 40vh;
     padding-top: 3rem;
     padding-bottom: 2rem;
+    background: var(--bg-color);
     color: #000000;
     position: relative;
     z-index: 2;
