--- a/src/Style/footer.css
+++ b/src/Style/footer.css
@@ -3,7 +3,7 @@
   min-height: 40vh;
   padding-top: 3rem;
   padding-bottom: 2rem;
-  background: var(--bg-color);
+  background: var(--bg-white);
   color: #000000;
   position: relative;
   z-index: 2;
