--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -64,6 +64,11 @@
   height: 100vh;
 }
 
+.vid2 {
+  height: 50vh;
+  min-height: unset;
+}
+
 .textline {
   background-image: linear-gradient(0deg, rgba(255, 255, 255, 0.8509803922) 0%, #efefef 19%, #efefef 86%, rgba(255, 255, 255, 0.8509803922) 100%);
 }
@@ -160,6 +165,18 @@
 }
 .product .prodHead .hollow {
   -webkit-text-stroke-color: var(--text-dark);
+}
+.product .prodHead h1 {
+  width: -moz-min-content;
+  width: min-content;
+  position: relative;
+}
+.product .prodHead h1 img {
+  height: clamp(2.25rem, 10vw, 5.5rem);
+  position: absolute;
+  bottom: 10px;
+  right: 0;
+  z-index: 2;
 }
 .product .prodHead h2 {
   float: right;
