--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -63,6 +63,10 @@
 .vid {
   height: 100vh;
 }
+.vid2 {
+  height: 50vh;
+  min-height: unset;
+}
 
 .textline {
   background-image: linear-gradient(
@@ -179,6 +183,18 @@
 
     .hollow {
       -webkit-text-stroke-color: var(--text-dark);
+    }
+    h1 {
+      width: min-content;
+      position: relative;
+      img {
+        height: clamp(2.25rem, 10vw, 5.5rem);
+        position: absolute;
+        bottom: 10px;
+        right: 0;
+        // left: 62%;
+        z-index: 2;
+      }
     }
 
     h2 {
