--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -10,6 +10,17 @@
   z-index: 15;
 }
 
+.headerWhite {
+  -webkit-backdrop-filter: blur(0px);
+          backdrop-filter: blur(0px);
+}
+.headerWhite .nav__link {
+  color: white;
+}
+.headerWhite .nav__logo {
+  filter: invert(1);
+}
+
 .nav {
   display: flex;
   flex-direction: row;
