--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -11,7 +11,16 @@
     // mix-blend-mode: difference;
     z-index: 15;
 }
+.headerWhite{
+    backdrop-filter: blur(0px);
 
+    .nav__link{
+        color: white;
+    }
+    .nav__logo{
+        filter: invert(1);
+    }
+}
 .nav {
     display: flex;
     flex-direction: row;
