--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -21,6 +21,14 @@
   filter: invert(1);
 }
 
+.headerBlack {
+  -webkit-backdrop-filter: blur(0px);
+          backdrop-filter: blur(0px);
+}
+.headerBlack .nav__link {
+  color: rgb(0, 0, 0);
+}
+
 .nav {
   display: flex;
   flex-direction: row;
