--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -136,7 +136,7 @@
 }
 
 .nav__link {
-  color: rgb(0, 0, 0);
+  color: rgb(0, 0, 0) !important;
   font-size: 14px;
   text-transform: uppercase;
   transition: all 0.4s ease;
