--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -154,7 +154,7 @@
 }
 
 .nav__link {
-    color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0) !important;
     font-size: 14px;
     text-transform: uppercase;
     transition: all 0.4s ease;
