--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -117,6 +117,9 @@
     width: auto;
     white-space: nowrap;
   }
+  .headerWhite .nav__link {
+    color: rgb(0, 0, 0);
+  }
 }
 .nav__list {
   display: flex;
@@ -136,7 +139,7 @@
 }
 
 .nav__link {
-  color: rgb(0, 0, 0) !important;
+  color: rgb(0, 0, 0);
   font-size: 14px;
   text-transform: uppercase;
   transition: all 0.4s ease;
