--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -4,6 +4,7 @@
   width: 100%;
   top: 0;
   left: 0;
+  padding-top: 10px;
   background-color: hsla(0, 0%, 91%, 0.85);
   -webkit-backdrop-filter: blur(7px);
           backdrop-filter: blur(7px);
