--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -5,6 +5,7 @@
     width: 100%;
     top: 0;
     left: 0;
+    padding-top: 10px;
     // background-color: var(--bg-color);
     background-color: hsl(0deg 0% 91% / 85%);
     backdrop-filter: blur(7px);
