--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -100,7 +100,7 @@ aside p {
   }
 }
 .primary-btn {
-  padding: 10px 20px;
+  padding: 15px 20px;
   margin-block: 2.5vh;
 }
 
@@ -174,7 +174,7 @@ aside p {
 
 .paragraph {
   display: flex;
-  font-size: clamp(2rem, 10vw, 6.25rem);
+  font-size: clamp(2rem, 10vw, 4.25rem);
   line-height: 1;
   padding: 40px;
   max-width: 1280px;
@@ -388,7 +388,7 @@ aside p {
   z-index: -1;
 }
 .legalHead p {
-  width: 60%;
+  width: 80%;
   line-height: 1.25;
   white-space-collapse: preserve-breaks;
 }
@@ -517,9 +517,11 @@ th {
   }
   .legalHead {
     padding-inline: 5vw;
+    min-height: 70vh;
+    gap: 5vh;
   }
   .legalHead h1 {
-    font-size: clamp(1.4rem, 5vw, 5.55rem);
+    font-size: clamp(1.4rem, 10vw, 5.55rem);
   }
   .legalHead p {
     width: 100%;
@@ -575,7 +577,7 @@ th {
     padding: 1.5em;
   }
   .paragraph {
-    font-size: clamp(4rem, 10vw, 8.25rem);
+    font-size: clamp(4rem, 10vw, 7.25rem);
   }
   .redText h3 {
     font-size: clamp(2.5rem, 10vw, 6rem);
