--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -103,7 +103,7 @@ aside p {
 
 //spotlight button
 .primary-btn {
-  padding: 10px 20px;
+  padding: 15px 20px;
   margin-block: 2.5vh;
 }
 
@@ -241,7 +241,7 @@ aside p {
 // SCroll paragraph
 .paragraph {
   display: flex;
-  font-size: clamp(2rem, 10vw, 6.25rem);
+  font-size: clamp(2rem, 10vw, 4.25rem);
   line-height: 1;
   padding: 40px;
   max-width: 1280px;
@@ -491,7 +491,7 @@ aside p {
   }
 
   p {
-    width: 60%;
+    width: 80%;
     line-height: 1.25;
     white-space-collapse: preserve-breaks;
   }
@@ -630,8 +630,10 @@ th {
   }
   .legalHead {
     padding-inline: 5vw;
+    min-height: 70vh;
+    gap: 5vh;
     h1 {
-      font-size: clamp(1.4rem, 5vw, 5.55rem);
+      font-size: clamp(1.4rem, 10vw, 5.55rem);
     }
     p {
       width: 100%;
@@ -690,7 +692,7 @@ th {
     }
   }
   .paragraph {
-    font-size: clamp(4rem, 10vw, 8.25rem);
+    font-size: clamp(4rem, 10vw, 7.25rem);
   }
   .redText {
     h3 {
