--- a/src/Style/Home/Home.css
+++ b/src/Style/Home/Home.css
@@ -158,6 +158,7 @@
   align-items: stretch;
   margin-block: 10vh;
   z-index: 3;
+  gap: 5vh;
 }
 .product .prodHead {
   text-transform: uppercase;
@@ -284,6 +285,6 @@
   }
   .LogoDisp {
     min-height: unset;
-    padding-top: 20vh;
+    padding-top: 10vh;
   }
 }/*# sourceMappingURL=Home.css.map */
