--- a/src/Components/preloader.css
+++ b/src/Components/preloader.css
@@ -7,9 +7,9 @@
 	user-select: none;
 }
 
-.pace.pace-inactive .pace-progress {
+/* .pace.pace-inactive .pace-progress {
 	display: none;
-}
+} */
 
 .pace .pace-progress {
 	background: #101010;
@@ -23,12 +23,39 @@
 	-webkit-transform: translate3d(0, 0, 0) !important;
 	-ms-transform: translate3d(0, 0, 0) !important;
 	transform: translate3d(0, 0, 0) !important;
+	transition: top 1s ease;
+}
+.pace .pace-progress::before {
+	transform:translatex(50%) translateY(var(--progress-top, 0));
+	/* top: calc(50% - 10px); */
+  opacity: var(--progress-opacity, 1);
+  transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1), opacity 1s cubic-bezier(0.19, 1, 0.22, 1);
+	top: calc(50% - 70px);
+    right: calc(50% + 5px);
+    /* margin-bottom: 10px; */
+    /* transform: translate(50%, 0); */
+	display: block;
+	position: absolute;
+	content: url(./llogo.png);
+	/* font-family: "Helvetica Neue", sans-serif; */
+	font-weight: 100;
+	font-size: 1rem;
+	line-height: 1;
+	text-align: center;
+	color: rgb(255, 255, 255);
+	/* transition: top 1.5s ease, opacity 1s ease ; */
+
 }
 
-.pace .pace-progress:after {
+
+.pace .pace-progress::after {
+	transform:translatex(50%) translateY(var(--progress-top, 0));
+	/* top: var(--progress-top, 50%); */
+  opacity: var(--progress-opacity, 1);
+  transition: all 1.5s cubic-bezier(0.19, 1, 0.22, 1) 0.5s, opacity 1s cubic-bezier(0.19, 1, 0.22, 1) 0.5s;
 	top: 50%;
     right: 50%;
-    transform: translate(50%, 0);
+    /* transform: translate(50%, 0); */
 	display: block;
 	position: absolute;
 	content: attr(data-progress-text);
@@ -38,62 +65,13 @@
 	line-height: 1;
 	text-align: center;
 	color: rgb(255, 255, 255);
+	/* transition: top 1s ease, opacity 1s ease; */
+
 }
 
 .pace-progress-inner {
+	width: 0;
 	height: 2px;
     background: white;
+	transition: all 2.5s cubic-bezier(0.19, 1, 0.22, 1),
 }
-
-  /* .pace .pace-progress {
-	background: #000000;
-	position: fixed;
-	z-index: 2000;
-	top: 0;
-	right: 100%;
-	width: 100%;
-	height: 2px;
-  }  */
-
-#preloader {
-	width: 100%;
-	height: 100vh;
-	background: #101010;
-	overflow: hidden;
-	position: fixed;
-	transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-} 
-
-/* LoadingBar.css */
-/* 
-#overlay {
-	width: 100%;
-	height: 100vh;
-	position: fixed;
-	z-index: 99999;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	background: rgba(0, 0, 0, 0.9);
-	transition: 1s 0.4s;
-  }
-  #progress {
-	height: 1px;
-	background: #fff;
-	position: absolute;
-	width: 0;
-	top: 50%;
-	transition: 1s;
-  }
-  #progstat {
-	font-size: 0.7em;
-	letter-spacing: 3px;
-	position: absolute;
-	top: 50%;
-	margin-top: -40px;
-	width: 100%;
-	text-align: center;
-	color: #fff;
-  }
-   */
