--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ a.button {
   padding: 1.25em;
   text-align: center;
   color: var(--accent);
-  font-size: 0.7em;
+  font-size: 0.9rem;
   font-weight: 500;
   font-family: inherit;
   background-color: var(--bg-light);
