--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -370,9 +370,9 @@ aside p {
 
       .button {
         position: absolute;
-        top: 40%;
+        top: calc(50% - 40px);
         left: 50%;
-        translate: -50%;
+        translate: -50% 0;
         scale: 0;
         transition: all 0.5s ease;
       }
