--- a/src/Style/Contact/contact.css
+++ b/src/Style/Contact/contact.css
@@ -43,9 +43,10 @@
 #contact-form input, #contact-form textarea {
   width: 100%;
   border: 0;
+  min-height: 50px;
   padding: 12px 16px;
-  margin-bottom: 15px !important;
-  border-radius: 20px;
+  margin-bottom: 21px !important;
+  border-radius: 50px;
   background: none;
   color: var(--text-dark);
   border: 1px solid var(--text-dark);
@@ -55,6 +56,7 @@
 }
 #contact-form textarea {
   height: 120px;
+  border-radius: 20px;
   resize: vertical;
 }
 #contact-form button {
@@ -63,7 +65,7 @@
   margin-bottom: 15px;
   align-self: center;
   background-color: var(--accent);
-  box-shadow: 0px 0px 5px #430a22;
+  box-shadow: 0px 0px 5px var(--accent);
   transition: all 0.4s ease;
 }
 #contact-form button:hover {
@@ -177,6 +179,7 @@
   .cont-form {
     padding-inline: 5%;
     row-gap: 20px;
+    min-width: 50vw;
   }
   .cont-map {
     order: 1;
