--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -88,9 +88,10 @@
   & textarea {
     width: 100%;
     border: 0;
+    min-height: 50px;
     padding: 12px 16px;
-    margin-bottom: 15px !important;
-    border-radius: 20px;
+    margin-bottom: 21px !important;
+    border-radius: 50px;
     background: none;
     color: var(--text-dark);
     border: 1px solid var(--text-dark);
@@ -101,6 +102,7 @@
 
   & textarea {
     height: 120px;
+    border-radius: 20px;
     resize: vertical;
   }
 
@@ -110,7 +112,7 @@
     margin-bottom: 15px;
     align-self: center;
     background-color: var(--accent);
-    box-shadow: 0px 0px 5px #430a22;
+    box-shadow: 0px 0px 5px var(--accent);
     transition: all 0.4s ease;
 
     &:hover {
@@ -242,6 +244,7 @@
   .cont-form {
     padding-inline: 5%;
     row-gap: 20px;
+    min-width: 50vw ;
   }
   .cont-map {
     order: 1;
