--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -55,12 +55,36 @@
 }
 .pFeature li {
   list-style: square;
+  position: relative;
+}
+.pFeature li::before {
+  background-color: var(--accent);
+  width: 1px;
+  content: "";
+  position: absolute;
+  top: 13px;
+  left: -17px;
+  transition: bottom 0.7s ease;
+}
+.pFeature li.animate::before {
+  animation: xtend 0.7s forwards; /* Trigger animation */
+}
+.pFeature li:last-child::before {
+  display: none;
 }
 .pFeature li::marker {
   color: var(--accent);
   font-size: 25px;
 }
 
+@keyframes xtend {
+  0% {
+    bottom: 45px;
+  }
+  100% {
+    bottom: -25px;
+  }
+}
 .pModel {
   height: 130vh;
   padding-block: 30vh;
@@ -226,12 +250,14 @@
   background: var(--bg-dark);
 }
 .pCont .choice {
+  height: 50px;
+  justify-content: center;
   position: relative;
   display: flex;
   flex-direction: column;
   padding: 12px 16px;
   margin-bottom: 15px !important;
-  border-radius: 20px;
+  border-radius: 50px;
   background: none;
   color: var(--text-dark);
   border: 1px solid var(--text-dark);
@@ -374,6 +400,9 @@
   color: #aaa;
   background: none;
   cursor: no-drop;
+}
+.pCont #contact-form button {
+  width: 100%;
 }
 
 @media (max-width: 770px) {
