--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -62,11 +62,41 @@
 
   li {
     list-style: square;
+    position: relative;
+
+    &::before {
+      background-color: var(--accent);
+      width: 1px;
+      content: '';
+      position: absolute;
+      top: 13px;
+      // bottom: -25px;
+      left: -17px;
+      transition: bottom 0.7s ease;
+      // animation: xtend 0.7s forwards;
+  }
+  &.animate::before {
+    animation: xtend 0.7s forwards; /* Trigger animation */
+  }
+
+  &:last-child{
+    &::before{
+      display: none;
+    }
+  }
 
     &::marker {
       color: var(--accent);
       font-size: 25px;
     }
+  }
+}
+@keyframes xtend {
+  0%{
+    bottom: 45px;
+  }
+  100%{
+    bottom: -25px;
   }
 }
 
@@ -262,12 +292,14 @@
     }
   }
   .choice {
+    height: 50px;
+    justify-content: center;
     position: relative;
     display: flex;
     flex-direction: column;
     padding: 12px 16px;
     margin-bottom: 15px !important;
-    border-radius: 20px;
+    border-radius: 50px;
     background: none;
     color: var(--text-dark);
     border: 1px solid var(--text-dark);
@@ -441,6 +473,9 @@
         }
       }
     }
+  }
+  #contact-form button {
+    width: 100%;
   }
 }
 
