--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -99,6 +99,9 @@
     transition: right 0.6s ease;
     box-shadow: -2px 0px 10px rgba(0, 0, 0, 0.3803921569);
   }
+  .headerWhite .nav__link {
+    color: rgb(0, 0, 0);
+  }
 }
 @media screen and (max-width: 770px) {
   .nav__menu {
