--- a/src/Style/Header.scss
+++ b/src/Style/Header.scss
@@ -108,6 +108,9 @@
         transition: right 0.6s ease;
         box-shadow: -2px 0px 10px #00000061;
     }
+    .headerWhite .nav__link {
+        color: rgb(0, 0, 0);
+    }
 }
 
 @media screen and (max-width: 770px) {
