swiper logic built and responsive

--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -214,9 +214,9 @@
       justify-content: right;
       gap: 30px;
       float: right;
-      button {
-        // width: 250px;
-      }
+      // button {
+      //   // width: 250px;
+      // }
     }
   }
 }
