--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -205,23 +205,24 @@ aside p {
   mask-image: linear-gradient(to bottom, black var(--wipe-position), transparent calc(var(--wipe-position) + var(--gradient-length)), transparent);
   -webkit-mask-image: linear-gradient(to bottom, black var(--wipe-position), transparent calc(var(--wipe-position) + var(--gradient-length)), transparent);
   transition: --wipe-position 4250ms linear;
+  width: 100%;
+  text-align: center;
+  text-align: -webkit-center;
+  z-index: -1;
+}
+.wipe img {
+  width: calc(100% - 1.5vw);
+  margin: auto;
 }
 
 .list {
-  position: relative;
+  position: absolute;
   display: flex;
   justify-content: space-evenly;
   align-items: stretch;
-  gap: 30px;
-}
-.list span {
-  position: absolute;
-  top: -350px;
-  left: 50%;
-  translate: -50%;
-  rotate: -90deg;
-  transform: scale(1.5);
-  z-index: -1;
+  gap: 1rem;
+  top: 50%;
+  translate: 0 calc(-50% + 25px);
 }
 .list .listItem2 {
   height: auto;
@@ -242,6 +243,7 @@ aside p {
   background: transparent !important;
 }
 .list .listItem {
+  width: 33.3333333333vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -266,6 +268,7 @@ aside p {
   animation: rot 10s linear infinite 0.5s both;
 }
 .list .listItem .imgWrap {
+  aspect-ratio: 1;
   position: relative;
   border-radius: 50%;
   outline: 2px solid black;
@@ -456,6 +459,79 @@ th {
   font-weight: bold;
 }
 
+.swiperNoswiping {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: stretch;
+  position: relative;
+  min-height: 600px;
+  overflow: hidden;
+  background-color: transparent; /* bg-neutral-950 */
+  padding: 2rem 0; /* py-8 */
+}
+.swiperNoswiping .motionDiv {
+  display: flex;
+  cursor: grab;
+  align-items: center;
+}
+.swiperNoswiping .motionDiv.active {
+  cursor: grabbing; /* active:cursor-grabbing */
+}
+.swiperNoswiping .images {
+  aspect-ratio: 1;
+  width: 33.3333333333vw;
+  flex-shrink: 0; /* shrink-0 */
+  border-radius: 50%; /* rounded-xl */
+  background-size: cover;
+  background-position: center;
+}
+.swiperNoswiping .dots {
+  position: absolute;
+  bottom: 0;
+  margin-block: 3rem;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  gap: 0.5rem; /* gap-2 */
+}
+.swiperNoswiping .dot {
+  height: 0.75rem; /* h-3 */
+  width: 0.75rem; /* w-3 */
+  border-radius: 9999px; /* rounded-full */
+  transition: background-color 0.3s ease; /* transition-colors */
+  border: 1px solid var(--accent);
+  padding: 0;
+  margin: 0;
+}
+.swiperNoswiping .dot.active {
+  background-color: var(--accent); /* bg-neutral-50 */
+}
+.swiperNoswiping .dot.inactive {
+  background-color: #ffffff; /* bg-neutral-500 */
+}
+.swiperNoswiping .gradientLeft,
+.swiperNoswiping .gradientRight {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  pointer-events: none;
+  width: 10vw;
+  max-width: 100px;
+}
+.swiperNoswiping .gradientLeft.left,
+.swiperNoswiping .gradientRight.left {
+  left: 0;
+  background: linear-gradient(to right, rgba(28, 28, 30, 0.5), rgba(28, 28, 30, 0));
+}
+.swiperNoswiping .gradientLeft.right,
+.swiperNoswiping .gradientRight.right {
+  right: 0;
+  background: linear-gradient(to left, rgba(28, 28, 30, 0.5), rgba(28, 28, 30, 0));
+}
+
 @media (max-width: 770px) {
   .over-scroll {
     padding-block: 12px;
@@ -463,28 +539,22 @@ th {
   .over-cont {
     padding-block: 12px;
   }
-  .list {
-    flex-direction: column;
-    gap: 20px;
-    margin-block: 5em;
-    overflow-x: visible;
+  .wipe {
+    width: auto;
+  }
+  .wipe img {
+    width: 199vw;
+    margin: auto;
+  }
+  .swiperNoswiping {
+    min-height: 500px;
   }
   .list .listItem img,
   .list .listItem2 img {
     width: 200px;
   }
   .list h5 {
-    background: white;
     z-index: 1;
-  }
-  .list span {
-    position: absolute;
-    top: 15px;
-    left: 50%;
-    translate: -50%;
-    rotate: 0deg;
-    transform: scale(1.15);
-    z-index: -1;
   }
   .paragraph {
     padding: 15px;
