--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -287,28 +287,31 @@ aside p {
   );
 
   transition: --wipe-position 4250ms linear;
+
+  width: 100%;
+  text-align: center;
+  text-align: -webkit-center;
+  z-index: -1;
+
+  img {
+    width: calc(100% - 1.5vw);
+    margin: auto;
+  }
 }
 
 .list {
-  position: relative;
+  position: absolute;
   display: flex;
   justify-content: space-evenly;
   align-items: stretch;
-  gap: 30px;
+  gap: 1rem;
+  top: 50%;
+  translate: 0 calc(-50% + 25px);
   // min-height: 300px;
   // overflow-x: scroll;
   // overscroll-behavior-x: contain;
   // scrollbar-width: none;
 
-  span {
-    position: absolute;
-    top: -350px;
-    left: 50%;
-    translate: -50%;
-    rotate: -90deg;
-    transform: scale(1.5);
-    z-index: -1;
-  }
   // .listItem:hover .imgWrap {
   //   transform: scale(1.4);
   // }
@@ -337,6 +340,7 @@ aside p {
     }
   }
   .listItem {
+    width: calc(100vw / 3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -362,6 +366,7 @@ aside p {
     }
 
     .imgWrap {
+      aspect-ratio: 1;
       position: relative;
       border-radius: 50%;
       outline: 2px solid black;
@@ -556,13 +561,97 @@ th {
   font-weight: bold;
 }
 
-// tbody tr:nth-child(even) {
-//   background-color: #f9f9f9;
-// }
+// Swiperrrr no swiping
+.swiperNoswiping {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: stretch;
+  
+  position: relative;
+  min-height: 600px;
+  overflow: hidden;
+  background-color: transparent; /* bg-neutral-950 */
+  padding: 2rem 0; /* py-8 */
 
-// tbody tr:hover {
-//   background-color: #f5f5f5;
-// }
+  .motionDiv {
+    display: flex;
+    cursor: grab;
+    align-items: center;
+
+    &.active {
+      cursor: grabbing; /* active:cursor-grabbing */
+    }
+  }
+
+  .images {
+    aspect-ratio: 1;
+    width: calc(100vw / 3);
+    flex-shrink: 0; /* shrink-0 */
+    border-radius: 50%; /* rounded-xl */
+    // background-color: #3b3b3b; /* bg-neutral-800 */
+    background-size: cover;
+    background-position: center;
+  }
+
+  .dots {
+    position: absolute;
+    bottom: 0;
+    margin-block: 3rem;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    gap: 0.5rem; /* gap-2 */
+  }
+
+  .dot {
+    height: 0.75rem; /* h-3 */
+    width: 0.75rem; /* w-3 */
+    border-radius: 9999px; /* rounded-full */
+    transition: background-color 0.3s ease; /* transition-colors */
+    border: 1px solid var(--accent);
+    padding: 0;
+    margin: 0;
+
+    &.active {
+      background-color: var(--accent); /* bg-neutral-50 */
+    }
+
+    &.inactive {
+      background-color: #ffffff; /* bg-neutral-500 */
+    }
+  }
+
+  .gradientLeft,
+  .gradientRight {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    pointer-events: none;
+    width: 10vw;
+    max-width: 100px;
+
+    &.left {
+      left: 0;
+      background: linear-gradient(
+        to right,
+        rgba(28, 28, 30, 0.5),
+        rgba(28, 28, 30, 0)
+      );
+    }
+
+    &.right {
+      right: 0;
+      background: linear-gradient(
+        to left,
+        rgba(28, 28, 30, 0.5),
+        rgba(28, 28, 30, 0)
+      );
+    }
+  }
+}
 
 @media (max-width: 770px) {
   .over-scroll {
@@ -571,28 +660,38 @@ th {
   .over-cont {
     padding-block: 12px;
   }
+  .wipe {
+    width: auto;
+    img {
+      width: calc(200vw - 1vw);
+      margin: auto;
+    }
+  }
+  .swiperNoswiping{
+    min-height: 500px;
+  }
   .list {
-    flex-direction: column;
-    gap: 20px;
-    margin-block: 5em;
-    overflow-x: visible;
+    // flex-direction: column;
+    // gap: 20px;
+    // margin-block: 5em;
+    // overflow-x: visible;
     .listItem img,
     .listItem2 img {
       width: 200px;
     }
     h5 {
-      background: white;
+      // background: white;
       z-index: 1;
     }
-    span {
-      position: absolute;
-      top: 15px;
-      left: 50%;
-      translate: -50%;
-      rotate: 0deg;
-      transform: scale(1.15);
-      z-index: -1;
-    }
+    // span {
+    //   position: absolute;
+    //   top: 15px;
+    //   left: 50%;
+    //   translate: -50%;
+    //   rotate: 0deg;
+    //   transform: scale(1.15);
+    //   z-index: -1;
+    // }
   }
 
   .paragraph {
