--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -274,13 +274,13 @@ aside p {
   --wipe-position: 100%;
   --gradient-length: 20%;
   mask-image: linear-gradient(
-    to bottom,
+    to right,
     black var(--wipe-position),
     transparent calc(var(--wipe-position) + var(--gradient-length)),
     transparent
   );
   -webkit-mask-image: linear-gradient(
-    to bottom,
+    to right,
     black var(--wipe-position),
     transparent calc(var(--wipe-position) + var(--gradient-length)),
     transparent
@@ -288,59 +288,51 @@ aside p {
 
   transition: --wipe-position 4250ms linear;
 
-  width: 100%;
+  width: 98vw;
+  translate: -2vw;
   text-align: center;
   text-align: -webkit-center;
   z-index: -1;
 
   img {
-    width: calc(100% - 1.5vw);
+    width: calc(100vw - 2vw);
     margin: auto;
   }
 }
 
+.var2 .listItem{
+gap: 0;
+}
 .list {
   position: absolute;
   display: flex;
   justify-content: space-evenly;
   align-items: stretch;
-  gap: 1rem;
+  gap: 2vw;
   top: 50%;
   translate: 0 calc(-50% + 25px);
-  // min-height: 300px;
-  // overflow-x: scroll;
-  // overscroll-behavior-x: contain;
-  // scrollbar-width: none;
-
-  // .listItem:hover .imgWrap {
-  //   transform: scale(1.4);
-  // }
-
-  // .listItem:not(:hover) .imgWrap {
-  //   transform: scale(1); /* Reset the scale for non-hovered items */
-  // }
 
   .listItem2 {
     height: auto;
-    width: 250px;
+    width: 100%;
     text-align: center;
     text-transform: uppercase;
     text-wrap: pretty;
     white-space-collapse: preserve;
     border: 2px solid var(--accent);
     border-radius: 50px 0;
-    padding: 1em;
+    padding-bottom: 1rem;
     background: radial-gradient(#a5185366, transparent);
 
     img {
-      width: 250px;
+      width: 100%;
     }
     h5 {
       background: transparent !important;
     }
   }
   .listItem {
-    width: calc(100vw / 3);
+    // width: calc(100vw / 3);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -351,6 +343,7 @@ aside p {
     text-transform: uppercase;
     h5 {
       font-size: 1.3em;
+      text-align: -webkit-center;
     }
     &:hover .imgWrap {
       outline: 2px solid var(--accent);
@@ -366,6 +359,7 @@ aside p {
     }
 
     .imgWrap {
+      width: 100%;
       aspect-ratio: 1;
       position: relative;
       border-radius: 50%;
@@ -379,11 +373,12 @@ aside p {
         left: 50%;
         translate: -50% 0;
         scale: 0;
+        -webkit-user-drag: none;
         transition: all 0.5s ease;
       }
     }
     img {
-      width: 300px;
+      width: 100%;
       -o-object-fit: scale-down;
       object-fit: scale-down;
       aspect-ratio: 1 / 1;
@@ -569,10 +564,10 @@ th {
   align-content: center;
   justify-content: center;
   align-items: stretch;
-  
+overflow-x: visible;
   position: relative;
   min-height: 600px;
-  overflow: hidden;
+  // overflow: hidden;
   background-color: transparent; /* bg-neutral-950 */
   padding: 2rem 0; /* py-8 */
 
@@ -586,20 +581,10 @@ th {
     }
   }
 
-  .images {
-    aspect-ratio: 1;
-    width: calc(100vw / 3);
-    flex-shrink: 0; /* shrink-0 */
-    border-radius: 50%; /* rounded-xl */
-    // background-color: #3b3b3b; /* bg-neutral-800 */
-    background-size: cover;
-    background-position: center;
-  }
-
   .dots {
     position: absolute;
     bottom: 0;
-    margin-block: 3rem;
+    margin-top: 3rem;
     display: flex;
     width: 100%;
     justify-content: center;
@@ -623,34 +608,6 @@ th {
       background-color: #ffffff; /* bg-neutral-500 */
     }
   }
-
-  .gradientLeft,
-  .gradientRight {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    pointer-events: none;
-    width: 10vw;
-    max-width: 100px;
-
-    &.left {
-      left: 0;
-      background: linear-gradient(
-        to right,
-        rgba(28, 28, 30, 0.5),
-        rgba(28, 28, 30, 0)
-      );
-    }
-
-    &.right {
-      right: 0;
-      background: linear-gradient(
-        to left,
-        rgba(28, 28, 30, 0.5),
-        rgba(28, 28, 30, 0)
-      );
-    }
-  }
 }
 
 @media (max-width: 770px) {
@@ -662,36 +619,30 @@ th {
   }
   .wipe {
     width: auto;
+    translate: -10px 0;
     img {
       width: calc(200vw - 1vw);
       margin: auto;
     }
   }
-  .swiperNoswiping{
-    min-height: 500px;
+  .swiperNoswiping {
+    min-height: 400px;
+  }
+  .var2 .listItem h4{
+    line-break: anywhere;
   }
   .list {
-    // flex-direction: column;
-    // gap: 20px;
-    // margin-block: 5em;
-    // overflow-x: visible;
+    gap: 5vw;
+    overflow-x: visible;
     .listItem img,
     .listItem2 img {
-      width: 200px;
+      width: 100% !important;
     }
     h5 {
       // background: white;
       z-index: 1;
     }
-    // span {
-    //   position: absolute;
-    //   top: 15px;
-    //   left: 50%;
-    //   translate: -50%;
-    //   rotate: 0deg;
-    //   transform: scale(1.15);
-    //   z-index: -1;
-    // }
+
   }
 
   .paragraph {
@@ -771,10 +722,7 @@ th {
   .nav__cta {
     min-height: 70px;
   }
-  .list span,
-  .pModel .pModelContent .list span {
-    transform: scale(1.7);
-  }
+
   .hero {
     // padding: 0 15%;
     padding-inline: clamp(5%, 5vw, 10%);
@@ -887,17 +835,35 @@ th {
   }
   .pModel {
     .listItem2 {
-      width: 350px;
+      width: 100%;
     }
-    img {
-      width: 300px;
+    img:not(.wipe img) {
+      width: 100%;
     }
+  }
+  .wipe img {
+    width: 94vw;
+}
+
+  .swiperNoswiping .motionDiv:has(.var2) {
+    min-height: 600px;
+    margin-bottom: 5vh;
+}
+.swiperNoswiping .dots {
+  bottom: -45px;
+
+  .dot{
+    min-height: unset;
+    height: 1.35rem;
+    width: 1.35rem;
+  }
   }
   .prodHero {
     justify-content: space-around !important;
     .pInfo {
       padding-inline: 20%;
       align-items: start;
+      grid-gap: 20%;
     }
   }
   .prodHero .pFeature h3 {
@@ -910,12 +876,9 @@ th {
 }
 
 @media (min-width: 2000px) {
-  .list span {
-    top: -300px;
-    transform: scale(2.1);
-  }
+
   .list .listItem img {
-    width: 400px;
+    width: 100%;
   }
   .list .listItem .imgWrap .button {
     top: 35%;
@@ -924,12 +887,9 @@ th {
     font-size: 1.8em;
   }
   .pModel .pModelContent {
-    .list span {
-      top: -300px;
-      transform: scale(2.1);
-    }
+
     .list .listItem .imgWrap img {
-      width: 400px;
+      width: 100%;
     }
     .list .listItem .imgWrap .button {
       top: 35%;
@@ -939,9 +899,20 @@ th {
     }
     &.light .list .listItem .imgWrap img,
     &.light .list .listItem .imgWrap2 img {
-      width: 500px !important;
+      width: 100% !important;
     }
   }
+  .wipe{
+    width: 95vw;
+    translate: -5vw;
+  img{
+    width: 90vw;
+  }
+  }
+  .swiperNoswiping .motionDiv:has(.var2) {
+    min-height: 750px;
+    margin-bottom: 5vh;
+}
   .hero {
     // padding: 0 15%;
     padding-inline: clamp(12%, 5vw, 18%);
