--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -300,23 +300,15 @@
     }
 
     .list {
-      flex-direction: column;
-      gap: 20px;
-      margin-block: 5em;
+      // flex-direction: column;
+      // gap: 20px;
+      // margin-block: 5em;
 
       h5 {
         background: white;
         z-index: 1;
       }
-      span {
-        position: absolute;
-        top: 15px;
-        left: 50%;
-        translate: -50%;
-        rotate: 0deg;
-        transform: scale(1.15);
-        z-index: -1;
-      }
+
     }
   }
   .LogoDisp {
