--- a/src/Style/ProductPage.css
+++ b/src/Style/ProductPage.css
@@ -20,9 +20,10 @@
   overflow: visible;
 }
 .pInfo img {
+  aspect-ratio: 1;
   inline-size: -webkit-fill-available;
   animation: rot 10s linear infinite both;
-  max-width: 80%;
+  max-width: 100%;
   -o-object-fit: scale-down;
      object-fit: scale-down;
 }
@@ -97,6 +98,12 @@
   transition: all 0.5s ease;
   isolation: isolate;
 }
+.pModel .wipe {
+  filter: invert(1);
+}
+.pModel img {
+  -webkit-user-drag: none;
+}
 .pModel .pModelContent.light .list h4 {
   background: transparent;
   color: rgb(0, 0, 0);
@@ -112,29 +119,23 @@
 .pModel .pModelContent.light .list .listItem .imgWrap,
 .pModel .pModelContent.light .list .listItem .imgWrap2 {
   position: relative;
+  width: 100%;
   border-radius: 50%;
   transition: all 0.5s ease;
 }
 .pModel .pModelContent.light .list .listItem .imgWrap img,
 .pModel .pModelContent.light .list .listItem .imgWrap2 img {
-  width: 400px;
+  width: 100%;
 }
 .pModel .list .listItem:hover .imgWrap {
   outline: 2px solid var(--accent);
-}
-.pModel .list span {
-  z-index: 0;
-  top: -350px;
-  transform: scale(1.5);
-}
-.pModel .list span svg * {
-  fill: white;
 }
 .pModel .list .listItem {
   height: unset;
   gap: 30px;
 }
 .pModel .list .listItem .imgWrap {
+  width: 100%;
   position: relative;
   border-radius: 50%;
   outline: 2px solid rgb(255, 255, 255);
@@ -142,15 +143,16 @@
   transition: all 0.5s ease;
 }
 .pModel .list .listItem .imgWrap img {
-  width: 300px;
+  width: 100%;
 }
 .pModel .list .listItem .imgWrap2 {
+  width: 100%;
   position: relative;
   border-radius: 50%;
   transition: all 0.5s ease;
 }
 .pModel .list .listItem .imgWrap2 img {
-  width: 400px;
+  width: 100%;
 }
 .pModel .list h4 {
   background: transparent;
@@ -438,33 +440,19 @@
   .pModel {
     height: unset;
     padding-block: 10vh;
+    justify-content: center;
   }
   .pModel .list:has(.imgWrap2) {
-    gap: 50px;
     margin-top: unset;
-    align-items: center;
-  }
-  .pModel .list {
-    flex-direction: column;
-    gap: 20px;
-    margin-block: 5em;
+    align-items: stretch;
   }
   .pModel .list h5 {
     background: black;
     color: white;
     z-index: 1;
   }
-  .pModel .list span {
-    position: absolute;
-    top: 15px;
-    left: 50%;
-    translate: -50%;
-    rotate: 0deg;
-    transform: scale(1.15);
-    z-index: 0;
-  }
   .pModel > img {
-    width: 200px;
+    width: 100%;
     /* position: sticky; */
     bottom: 0px;
   }
@@ -484,6 +472,6 @@
     font-size: clamp(1.9rem, 10vw, 3.6rem);
   }
   .pModel .list .listItem .imgWrap img {
-    width: 200px;
+    width: 100%;
   }
 }/*# sourceMappingURL=ProductPage.css.map */
