--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -214,6 +214,7 @@ aside p {
 .wipe img {
   width: 98vw;
   margin: auto;
+  padding-inline: 7%;
 }
 
 .var2 .listItem {
@@ -228,6 +229,7 @@ aside p {
   gap: 2vw;
   top: 50%;
   translate: 0 calc(-50% + 25px);
+  padding-inline: 10%;
 }
 .list .listItem2 {
   height: auto;
@@ -238,7 +240,7 @@ aside p {
   white-space-collapse: preserve;
   border: 2px solid var(--accent);
   border-radius: 50px 0;
-  padding-bottom: 1rem;
+  padding: 1rem;
   background: radial-gradient(rgba(165, 24, 83, 0.4), transparent);
 }
 .list .listItem2 img {
@@ -512,6 +514,18 @@ th {
   background-color: #ffffff; /* bg-neutral-500 */
 }
 
+.swiperNoswiping:has(.var2) .dots {
+  display: none;
+}
+
+.swiperNoswiping:has(.var2) .listItem {
+  gap: 0 !important;
+}
+.swiperNoswiping:has(.var2) .listItem img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 @media (max-width: 770px) {
   .over-scroll {
     padding-block: 12px;
@@ -526,9 +540,17 @@ th {
   .wipe img {
     width: 199vw;
     margin: auto;
+    padding-inline: 0;
   }
   .swiperNoswiping {
     min-height: 400px;
+  }
+  .swiperNoswiping:has(.var2) {
+    min-height: 250px;
+  }
+  .swiperNoswiping:has(.var2) .dots {
+    display: flex;
+    bottom: -50px;
   }
   .var2 .listItem h4 {
     line-break: anywhere;
@@ -732,19 +754,24 @@ th {
   .prodHero h4,
   .pCont h4,
   .pTable h4 {
-    font-size: 1.6rem !important;
+    font-size: 2rem !important;
   }
   .pModel .listItem2 {
     width: 100%;
   }
-  .pModel img:not(.wipe img) {
+  .pModel .list img:not(.wipe img) {
     width: 100%;
+  }
+  .pModel > img {
+    width: 750px;
+    position: absolute;
+    bottom: -350px;
   }
   .wipe img {
     width: 94vw;
   }
   .swiperNoswiping .motionDiv:has(.var2) {
-    min-height: 600px;
+    min-height: 450px;
     margin-bottom: 5vh;
   }
   .swiperNoswiping .dots {
@@ -759,7 +786,7 @@ th {
     justify-content: space-around !important;
   }
   .prodHero .pInfo {
-    padding-inline: 20%;
+    padding-inline: 10%;
     align-items: start;
     grid-gap: 20%;
   }
@@ -801,7 +828,7 @@ th {
     width: 90vw;
   }
   .swiperNoswiping .motionDiv:has(.var2) {
-    min-height: 750px;
+    min-height: 550px;
     margin-bottom: 5vh;
   }
   .hero {
@@ -872,7 +899,7 @@ th {
   .prodHero h4,
   .pCont h4,
   .pTable h4 {
-    font-size: 2rem !important;
+    font-size: 3rem !important;
   }
   .prodHero .pFeature h3 {
     font-size: clamp(3.5rem, 10vw, 4.5rem) !important;
