--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -32,49 +32,10 @@
   
   h1 {
     font-size: clamp(2.35rem, 10vw, 5.5rem);
+    line-break: anywhere;
 }
 }
 
-// .contact {
-//     --defaultGlow:hsla(321, 100%, 75%, 0.45);
-//     --validGlow:hsla(120, 71%, 48%, 0.5);
-//     --invalidGlow:hsla(0, 100%, 61%, 0.5);
-
-//     height: 100vh;
-//     width: 100vw;
-//     overflow: hidden;
-//     position: relative;
-//     display: grid;
-//     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-//     grid-template-columns: 1fr;
-//     grid-auto-columns: 1fr;
-//     gap: 1em 1em;
-//     margin-block: 0;
-//     place-items: center;
-//     background: radial-gradient( circle at 50% 50%, transparent 0%, #32323275 80%, var(--bg-color) 95% );
-
-//     &::before, &::after {
-//         content: '';
-//         width: 2.5%;
-//         height: 70%;
-//         position: absolute;
-//         top: 50%;
-//         left: 0%;
-//         translate: -50% -50%;
-//         /* clip-path: circle(50%); */
-//         border-radius: 50%;
-//         background-color: var(--Glow);
-//         filter: blur(50px) drop-shadow(0px 42px 40px var(--Glow));
-//         transition: all 1s ease;
-//         animation: glow 10s ease infinite ;
-//     }
-
-//     &::after {
-//         left: unset;
-//         right: 0%;
-//         translate: 50% -50%;
-//     }
-// }
 #contact-form {
   display: flex;
     flex-direction: column;
