--- a/src/Style/ProductPage.scss
+++ b/src/Style/ProductPage.scss
@@ -297,7 +297,10 @@
       border-color: var(--bg-color) !important;
     }
     select {
-      background: var(--bg-dark) !important;
+      background-color: transparent;
+      option{
+        background: var(--bg-dark) !important;
+      }
     }
     label {
       background: var(--bg-dark);
@@ -331,6 +334,10 @@
       border: none;
       color: var(--text-dark);
       text-transform: uppercase;
+      background-color: transparent;
+      option{
+        background: var(--bg-color) !important;
+      }
 
       &:focus,
       &:focus-within {
@@ -535,14 +542,12 @@
       align-items: stretch;
     }
     .list {
-      // flex-direction: column;
-      // gap: 20px;
-      // margin-block: 5em;
 
       h5 {
         background: black;
         color: white;
         z-index: 1;
+        line-break: anywhere;
       }
       // span {
       //   position: absolute;
