--- a/src/Style/Component/Component.css
+++ b/src/Style/Component/Component.css
@@ -1,4 +1,4 @@
-aside {
+.fixed-aside {
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -37,17 +37,17 @@ aside {
   border-right: 1px solid;
 }
 
-aside span {
+.fixed-aside > span {
   mix-blend-mode: difference;
   filter: grayscale(1) invert(1);
+  transition: transform 2s ease-in-out;
 }
 
-aside a {
+.fixed-aside a {
   font-weight: revert;
-  color: revert;
 }
 
-aside p {
+.fixed-aside p {
   transition: all 0.5s ease;
   font-family: "MonumentRegular";
   letter-spacing: 5px;
@@ -64,41 +64,6 @@ aside p {
   opacity: 1;
 }
 
-@supports (animation-timeline: view()) {
-  @keyframes fade-out-left {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-      transform: translateX(-30vw);
-    }
-  }
-  @keyframes fade-out-right {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-      transform: translateX(30vw);
-    }
-  }
-  @keyframes shadow-in {
-    to {
-      box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-    }
-  }
-  .over-scroll {
-    animation: fade-out-left auto ease-in both;
-    animation-timeline: scroll();
-    animation-range: 0% 2%;
-  }
-  .over-cont {
-    animation: fade-out-right auto ease-in both;
-    animation-timeline: scroll();
-    animation-range: 0% 2%;
-  }
-}
 .primary-btn {
   padding: 15px 20px;
   margin-block: 2.5vh;
@@ -346,7 +311,7 @@ aside p {
   width: 400px;
   border-radius: 20px;
   -o-object-fit: scale-down;
-     object-fit: scale-down;
+  object-fit: scale-down;
   pointer-events: none;
 }
 .blog .metaInfo {
@@ -523,7 +488,7 @@ th {
 }
 .swiperNoswiping:has(.var2) .listItem img {
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 @media (max-width: 770px) {
@@ -620,8 +585,8 @@ th {
     overflow-x: scroll;
     overscroll-behavior-x: contain;
     -webkit-user-select: none;
-       -moz-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    user-select: none;
   }
 }
 @media (min-width: 1650px) {
