--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -1,5 +1,5 @@
 // For overlay comp
-aside {
+.fixed-aside {
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -8,6 +8,8 @@ aside {
   position: fixed;
   right: 0;
   top: 200px;
+  -webkit-writing-mode: vertical-lr;
+  -ms-writing-mode: tb-lr;
   writing-mode: vertical-lr;
   padding-block: 20px;
   z-index: 10;
@@ -17,6 +19,8 @@ aside {
   position: fixed;
   left: 0;
   top: 80vh;
+  -webkit-writing-mode: vertical-lr;
+  -ms-writing-mode: tb-lr;
   writing-mode: vertical-lr;
   padding-block: 20px;
   z-index: 10;
@@ -38,15 +42,17 @@ aside {
     }
   }
 }
-aside span {
+.fixed-aside > span {
   mix-blend-mode: difference;
+  -webkit-filter: grayscale(1) invert(1);
   filter: grayscale(1) invert(1);
+  transition: transform 2s ease-in-out;
 }
-aside a {
+.fixed-aside a {
   font-weight: revert;
-  color: revert;
+  // color: revert;
 }
-aside p {
+.fixed-aside p {
   transition: all 0.5s ease;
   font-family: "MonumentRegular";
   letter-spacing: 5px;
@@ -62,44 +68,71 @@ aside p {
     cursor: help;
     opacity: 1;
   }
-}
-@supports (animation-timeline: view()) {
-  @keyframes fade-out-left {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-      transform: translateX(-30vw);
-    }
   }
+//   @supports (animation-timeline: view()) {
+//     @-webkit-keyframes fade-out-left {
+//       from {
+//         opacity: 1;
+//       }
+//       to {
+//         opacity: 0;
+//         transform: translateX(-30vw);
+//       }
+//     }
+//     @keyframes fade-out-left {
+//       from {
+//         opacity: 1;
+//       }
+//       to {
+//         opacity: 0;
+//         transform: translateX(-30vw);
+//       }
+//     }
 
-  @keyframes fade-out-right {
-    from {
-      opacity: 1;
-    }
-    to {
-      opacity: 0;
-      transform: translateX(30vw);
-    }
-  }
+//     @-webkit-keyframes fade-out-right {
+//       from {
+//         opacity: 1;
+//       }
+//       to {
+//         opacity: 0;
+//         transform: translateX(30vw);
+//       }
+//     }
 
-  @keyframes shadow-in {
-    to {
-      box-shadow: 0 10px 10px #0003;
-    }
-  }
-  .over-scroll {
-    animation: fade-out-left auto ease-in both;
-    animation-timeline: scroll();
-    animation-range: 0% 2%;
-  }
-  .over-cont {
-    animation: fade-out-right auto ease-in both;
-    animation-timeline: scroll();
-    animation-range: 0% 2%;
-  }
-}
+//     @keyframes fade-out-right {
+//       from {
+//         opacity: 1;
+//       }
+//       to {
+//         opacity: 0;
+//         transform: translateX(30vw);
+//       }
+//     }
+
+//   @-webkit-keyframes shadow-in {
+//     to {
+//       box-shadow: 0 10px 10px #0003;
+//     }
+//   }
+
+//   @keyframes shadow-in {
+//     to {
+//       box-shadow: 0 10px 10px #0003;
+//     }
+//   }
+//   .over-scroll {
+//     -webkit-animation: fade-out-left auto ease-in both;
+//     animation: fade-out-left auto ease-in both;
+//     animation-timeline: scroll();
+//     animation-range: 0% 2%;
+//   }
+//   .over-cont {
+//     -webkit-animation: fade-out-right auto ease-in both;
+//     animation: fade-out-right auto ease-in both;
+//     animation-timeline: scroll();
+//     animation-range: 0% 2%;
+//   }
+// }
 
 //spotlight button
 .primary-btn {
@@ -136,6 +169,7 @@ aside p {
   // margin-top: 4vh;
   pointer-events: all;
   cursor: pointer;
+  -webkit-animation: jump 10s ease infinite;
   animation: jump 10s ease infinite;
   // button {
   //   width: 200px;
@@ -207,7 +241,9 @@ aside p {
       z-index: -1;
     }
     &::after {
+      transition: -webkit-filter 0.9s ease-out;
       transition: filter 0.9s ease-out;
+      transition: filter 0.9s ease-out, -webkit-filter 0.9s ease-out;
     }
 
     &:hover,
@@ -216,9 +252,11 @@ aside p {
 
       &::before,
       &::after {
+        -webkit-animation: shadow 20s linear infinite;
         animation: shadow 20s linear infinite;
       }
       &::after {
+        -webkit-filter: blur(5px);
         filter: blur(5px);
       }
     }
@@ -356,7 +394,9 @@ aside p {
       scale: 1;
     }
     &:hover .imgWrap img {
+      -webkit-filter: blur(2px) opacity(0.4);
       filter: blur(2px) opacity(0.4);
+      -webkit-animation: rot 10s linear infinite 0.5s both;
       animation: rot 10s linear infinite 0.5s both;
     }
 
@@ -417,11 +457,13 @@ aside p {
     align-items: center;
     flex-wrap: wrap;
     padding-block: 2vh;
+    -webkit-filter: opacity(0.5);
     filter: opacity(0.5);
     border-bottom: 2px solid grey;
     transition: border-bottom 0.1s ease, all 0.5s ease-in-out;
 
     &:hover {
+      -webkit-filter: opacity(1);
       filter: opacity(1);
       cursor: pointer;
       border-bottom: 2px solid rgb(50, 50, 50);
@@ -436,6 +478,7 @@ aside p {
     height: 300px;
     width: 400px;
     border-radius: 20px;
+    -o-object-fit: scale-down;
     object-fit: scale-down;
     pointer-events: none;
   }
@@ -575,10 +618,12 @@ th {
 
   .motionDiv {
     display: flex;
+    cursor: -webkit-grab;
     cursor: grab;
     align-items: center;
 
     &.active {
+      cursor: -webkit-grabbing;
       cursor: grabbing; /* active:cursor-grabbing */
     }
   }
@@ -617,6 +662,7 @@ th {
 .swiperNoswiping:has(.var2) .listItem {
   gap: 0 !important;
   img {
+    -o-object-fit: contain;
     object-fit: contain;
   }
 }
@@ -722,6 +768,9 @@ th {
   .table-container {
     overflow-x: scroll;
     overscroll-behavior-x: contain;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
   }
 }
@@ -873,7 +922,7 @@ th {
   .pInfo img {
     -o-object-fit: contain !important;
     object-fit: contain !important;
-}
+  }
   .swiperNoswiping .motionDiv:has(.var2) {
     min-height: 450px;
     margin-bottom: 5vh;
