--- a/src/Style/Contact/contact.scss
+++ b/src/Style/Contact/contact.scss
@@ -6,11 +6,14 @@
   align-items: center;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   grid-template-rows: 1fr;
-  column-gap: 3vw;
+  -moz-column-gap: 3vw;
+       column-gap: 3vw;
 }
 .cont-map {
   width: 100%;
   //   max-width: 350px;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   border-radius: 25px;
   overflow: hidden;
