--- a/src/Style/Home/Home.scss
+++ b/src/Style/Home/Home.scss
@@ -22,9 +22,11 @@
   position: fixed;
   top: 10%;
   left: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 40px;
-  filter: grayscale(0.9) brightness(0.5);
+  -webkit-filter: grayscale(0.9) brightness(0.5);
+          filter: grayscale(0.9) brightness(0.5);
   transition: all 0.3s ease-out;
   transform: translate(-50%, 0);
   z-index: 0;
@@ -88,7 +90,8 @@
     translate: 0 -20vh;
     line-height: 1;
     flex-wrap: wrap;
-    filter: invert(1);
+    -webkit-filter: invert(1);
+            filter: invert(1);
     z-index: 2;
 
     .word {
@@ -125,7 +128,8 @@
 }
 
 .redText {
-  scroll-snap-type: block;
+  -ms-scroll-snap-type: block;
+      scroll-snap-type: block;
   overflow-x: hidden;
   .text {
     position: relative;
@@ -153,6 +157,7 @@
   text-align: -webkit-center;
   text-align: center;
   .mainVid {
+    position: -webkit-sticky;
     position: sticky;
     // left: 50%;
     top: 5%;
@@ -186,6 +191,8 @@
       -webkit-text-stroke-color: var(--text-dark);
     }
     h1 {
+      width: -webkit-min-content;
+      width: -moz-min-content;
       width: min-content;
       position: relative;
       img {
@@ -203,6 +210,8 @@
     }
 
     p {
+      width: -webkit-fit-content;
+      width: -moz-fit-content;
       width: fit-content;
       margin-top: 25px;
     }
@@ -282,6 +291,8 @@
 
   .videoSec {
     min-height: unset;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     padding-top: 5vh;
     .mainVid {
