--- a/src/Style/Component/Component.scss
+++ b/src/Style/Component/Component.scss
@@ -609,7 +609,7 @@ th {
   align-content: center;
   justify-content: center;
   align-items: stretch;
-  overflow-x: visible;
+  overflow-x: hidden;
   position: relative;
   min-height: 600px;
   // overflow: hidden;
