--- a/src/Style/footer.css
+++ b/src/Style/footer.css
@@ -6,6 +6,7 @@
   background: var(--bg-white);
   color: #000000;
   position: relative;
+  overflow-x: hidden;
   z-index: 2;
   scroll-snap-align: none;
 }
